姑且更新一下

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # 构建产物
-*.exe
 *.dll
 *.obj
 *.o
+*.rc
 
 # 配置文件（不要把你自己的密码提交到仓库）
 config.yaml
@@ -15,6 +15,8 @@ config.yaml
 bin/
 build/
 dist/
+.gocache/
+.gomodcache/
 
 # 临时文件
 *.log
